corpus/foreach.txt
===
Foreach
===

foreach port( ports ) {
  display(port);
}


foreach port( ports ) display(port);

---
    (source_file
      (foreach_statement
        (identifier)
        (argument_list
          (identifier))
        (compound_statement
          (expression_statement
            (call_expression
              (identifier)
              (argument_list
                (identifier))))))
      (foreach_statement
        (identifier)
        (argument_list
          (identifier))
        (expression_statement
          (call_expression
            (identifier)
            (argument_list
              (identifier))))))
