corpus/strings.txt
===
Assignments
===
a = 1;
b = "eins";
b = 'eins';
c = "yes multiline strings
''''
are totally legal";


---
    (source_file
      (expression_statement
        (assignment_expression
          (identifier)
          (number_literal)))
      (expression_statement
        (assignment_expression
          (identifier)
          (string_literal)))
      (expression_statement
        (assignment_expression
          (identifier)
          (string_literal)))
      (expression_statement
        (assignment_expression
          (identifier)
          (string_literal))))
